FLytter ut omsorgsvilkåret slik at dette er tilgjengelig for flere ytelser