@@ -1,45 +1,40 @@
-package no.nav.k9.sak.ytelse.pleiepengerbarn.inngangsvilkår.omsorgenfor;
+package no.nav.k9.sak.inngangsvilkår.omsorg;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.NavigableSet;
 import java.util.Optional;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.enterprise.inject.Any;
+import jakarta.enterprise.inject.Instance;
 import jakarta.inject.Inject;
-import no.nav.fpsak.tidsserie.LocalDateInterval;
 import no.nav.fpsak.tidsserie.LocalDateSegment;
-import no.nav.fpsak.tidsserie.LocalDateSegmentCombinator;
 import no.nav.fpsak.tidsserie.LocalDateTimeline;
 import no.nav.fpsak.tidsserie.LocalDateTimeline.JoinStyle;
 import no.nav.k9.kodeverk.geografisk.AdresseType;
 import no.nav.k9.kodeverk.person.RelasjonsRolleType;
+import no.nav.k9.kodeverk.sykdom.Resultat;
 import no.nav.k9.kodeverk.vilkår.VilkårType;
 import no.nav.k9.sak.behandlingskontroll.BehandlingskontrollKontekst;
 import no.nav.k9.sak.behandlingslager.behandling.personopplysning.PersonAdresseEntitet;
 import no.nav.k9.sak.behandlingslager.behandling.personopplysning.PersonopplysningerAggregat;
 import no.nav.k9.sak.behandlingslager.behandling.repository.BehandlingRepository;
-import no.nav.k9.sak.behandlingslager.behandling.vilkår.KantIKantVurderer;
-import no.nav.k9.sak.behandlingslager.behandling.vilkår.PåTversAvHelgErKantIKantVurderer;
 import no.nav.k9.sak.domene.person.personopplysning.BasisPersonopplysningTjeneste;
 import no.nav.k9.sak.domene.typer.tid.DatoIntervallEntitet;
 import no.nav.k9.sak.inngangsvilkår.VilkårData;
 import no.nav.k9.sak.inngangsvilkår.VilkårUtfallOversetter;
-import no.nav.k9.sak.kontrakt.sykdom.Resultat;
+import no.nav.k9.sak.inngangsvilkår.omsorg.regelmodell.BostedsAdresse;
+import no.nav.k9.sak.inngangsvilkår.omsorg.regelmodell.OmsorgenForVilkår;
+import no.nav.k9.sak.inngangsvilkår.omsorg.regelmodell.OmsorgenForVilkårGrunnlag;
+import no.nav.k9.sak.inngangsvilkår.omsorg.regelmodell.Relasjon;
+import no.nav.k9.sak.inngangsvilkår.omsorg.regelmodell.RelasjonsRolle;
+import no.nav.k9.sak.inngangsvilkår.omsorg.repo.OmsorgenForGrunnlag;
+import no.nav.k9.sak.inngangsvilkår.omsorg.repo.OmsorgenForGrunnlagRepository;
+import no.nav.k9.sak.perioder.VilkårsPerioderTilVurderingTjeneste;
 import no.nav.k9.sak.typer.AktørId;
-import no.nav.k9.sak.ytelse.pleiepengerbarn.inngangsvilkår.omsorgenfor.regelmodell.BostedsAdresse;
-import no.nav.k9.sak.ytelse.pleiepengerbarn.inngangsvilkår.omsorgenfor.regelmodell.OmsorgenForVilkår;
-import no.nav.k9.sak.ytelse.pleiepengerbarn.inngangsvilkår.omsorgenfor.regelmodell.OmsorgenForVilkårGrunnlag;
-import no.nav.k9.sak.ytelse.pleiepengerbarn.inngangsvilkår.omsorgenfor.regelmodell.Relasjon;
-import no.nav.k9.sak.ytelse.pleiepengerbarn.inngangsvilkår.omsorgenfor.regelmodell.RelasjonsRolle;
-import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.omsorg.OmsorgenForGrunnlag;
-import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.omsorg.OmsorgenForGrunnlagRepository;
-import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.søknadsperiode.SøknadsperiodeGrunnlag;
-import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.søknadsperiode.SøknadsperiodeRepository;
-import no.nav.k9.sak.ytelse.pleiepengerbarn.repo.søknadsperiode.Søknadsperioder;
 
 @ApplicationScoped
 public class OmsorgenForTjeneste {
@@ -48,23 +43,26 @@ public class OmsorgenForTjeneste {
     private OmsorgenForGrunnlagRepository omsorgenForGrunnlagRepository;
     private BehandlingRepository behandlingRepository;
     private BasisPersonopplysningTjeneste personopplysningTjeneste;
-    private SøknadsperiodeRepository søknadsperiodeRepository;
-    private KantIKantVurderer kantIKantVurderer = new PåTversAvHelgErKantIKantVurderer();
+    private Instance<VilkårsPerioderTilVurderingTjeneste> vilkårsPerioderTilVurderingTjenester;
 
     OmsorgenForTjeneste() {
         // CDI
     }
 
     @Inject
-    OmsorgenForTjeneste(OmsorgenForGrunnlagRepository omsorgenForGrunnlagRepository, BehandlingRepository behandlingRepository, BasisPersonopplysningTjeneste personopplysningTjeneste, SøknadsperiodeRepository søknadsperiodeRepository) {
+    public OmsorgenForTjeneste(OmsorgenForGrunnlagRepository omsorgenForGrunnlagRepository,
+                               BehandlingRepository behandlingRepository,
+                               BasisPersonopplysningTjeneste personopplysningTjeneste,
+                               @Any Instance<VilkårsPerioderTilVurderingTjeneste> vilkårsPerioderTilVurderingTjenester) {
+
         this.utfallOversetter = new VilkårUtfallOversetter();
         this.omsorgenForGrunnlagRepository = omsorgenForGrunnlagRepository;
         this.behandlingRepository = behandlingRepository;
         this.personopplysningTjeneste = personopplysningTjeneste;
-        this.søknadsperiodeRepository = søknadsperiodeRepository;
+        this.vilkårsPerioderTilVurderingTjenester = vilkårsPerioderTilVurderingTjenester;
     }
 
-    public List<VilkårData> vurderPerioder(BehandlingskontrollKontekst kontekst, LocalDateTimeline<OmsorgenForVilkårGrunnlag> samletOmsorgenForTidslinje) {
+    public List<VilkårData> vurderPerioder(LocalDateTimeline<OmsorgenForVilkårGrunnlag> samletOmsorgenForTidslinje) {
         final List<VilkårData> resultat = new ArrayList<>();
         for (LocalDateSegment<OmsorgenForVilkårGrunnlag> s : samletOmsorgenForTidslinje.toSegments()) {
             final var evaluation = new OmsorgenForVilkår().evaluer(s.getValue());
@@ -75,53 +73,48 @@ public class OmsorgenForTjeneste {
         return resultat;
     }
 
-    LocalDateTimeline<OmsorgenForVilkårGrunnlag> mapGrunnlag(BehandlingskontrollKontekst kontekst, NavigableSet<DatoIntervallEntitet> perioder) {
+    public LocalDateTimeline<OmsorgenForVilkårGrunnlag> mapGrunnlag(BehandlingskontrollKontekst kontekst, NavigableSet<DatoIntervallEntitet> perioder) {
         return mapGrunnlag(kontekst.getBehandlingId(), kontekst.getAktørId(), perioder);
     }
 
     public LocalDateTimeline<OmsorgenForVilkårGrunnlag> mapGrunnlag(long behandlingId, AktørId aktørId, NavigableSet<DatoIntervallEntitet> perioder) {
         final OmsorgenForVilkårGrunnlag systemgrunnlag = oversettSystemdataTilRegelModellOmsorgen(behandlingId, aktørId, perioder);
         final var vurdertOmsorgenForTidslinje = oversettTilRegelModellOmsorgenForVurderinger(behandlingId);
-        final var samletOmsorgenForTidslinje = slåSammenGrunnlagFraSystemOgVurdering(perioder, systemgrunnlag, vurdertOmsorgenForTidslinje);
-        return samletOmsorgenForTidslinje;
+
+        return slåSammenGrunnlagFraSystemOgVurdering(perioder, systemgrunnlag, vurdertOmsorgenForTidslinje);
     }
 
     private LocalDateTimeline<OmsorgenForVilkårGrunnlag> slåSammenGrunnlagFraSystemOgVurdering(final NavigableSet<DatoIntervallEntitet> perioder,
-            final OmsorgenForVilkårGrunnlag systemgrunnlag,
-            final LocalDateTimeline<OmsorgenForVilkårGrunnlag> vurdertOmsorgenForTidslinje) {
-        final var systemdatatidslinje = new LocalDateTimeline<OmsorgenForVilkårGrunnlag>(perioder.stream().map(p -> new LocalDateSegment<OmsorgenForVilkårGrunnlag>(p.toLocalDateInterval(), systemgrunnlag)).collect(Collectors.toList()));
-        return vurdertOmsorgenForTidslinje.combine(systemdatatidslinje, new LocalDateSegmentCombinator<OmsorgenForVilkårGrunnlag, OmsorgenForVilkårGrunnlag, OmsorgenForVilkårGrunnlag>() {
-            @Override
-            public LocalDateSegment<OmsorgenForVilkårGrunnlag> combine(LocalDateInterval datoInterval, LocalDateSegment<OmsorgenForVilkårGrunnlag> datoSegment, LocalDateSegment<OmsorgenForVilkårGrunnlag> datoSegment2) {
-                if (datoSegment == null) {
-                    return new LocalDateSegment<OmsorgenForVilkårGrunnlag>(datoInterval, datoSegment2.getValue());
-                }
-
-                final OmsorgenForVilkårGrunnlag sg = datoSegment2.getValue();
-                final OmsorgenForVilkårGrunnlag sammensatt = new OmsorgenForVilkårGrunnlag(sg.getRelasjonMellomSøkerOgPleietrengende(), sg.getSøkersAdresser(), sg.getPleietrengendeAdresser(), datoSegment.getValue().getErOmsorgsPerson());
-                return new LocalDateSegment<OmsorgenForVilkårGrunnlag>(datoInterval, sammensatt);
+                                                                                               final OmsorgenForVilkårGrunnlag systemgrunnlag,
+                                                                                               final LocalDateTimeline<OmsorgenForVilkårGrunnlag> vurdertOmsorgenForTidslinje) {
+        final var systemdatatidslinje = new LocalDateTimeline<>(perioder.stream().map(p -> new LocalDateSegment<>(p.toLocalDateInterval(), systemgrunnlag)).collect(Collectors.toList()));
+        return vurdertOmsorgenForTidslinje.combine(systemdatatidslinje, (datoInterval, datoSegment, datoSegment2) -> {
+            if (datoSegment == null) {
+                return new LocalDateSegment<>(datoInterval, datoSegment2.getValue());
             }
+
+            final OmsorgenForVilkårGrunnlag sg = datoSegment2.getValue();
+            final OmsorgenForVilkårGrunnlag sammensatt = new OmsorgenForVilkårGrunnlag(sg.getRelasjonMellomSøkerOgPleietrengende(), sg.getSøkersAdresser(), sg.getPleietrengendeAdresser(), datoSegment.getValue().getErOmsorgsPerson());
+            return new LocalDateSegment<>(datoInterval, sammensatt);
         }, JoinStyle.RIGHT_JOIN);
     }
 
     private LocalDateTimeline<OmsorgenForVilkårGrunnlag> oversettTilRegelModellOmsorgenForVurderinger(long behandlingId) {
         final Optional<OmsorgenForGrunnlag> omsorgenForGrunnlag = omsorgenForGrunnlagRepository.hentHvisEksisterer(behandlingId);
-        final var vurdertOmsorgenForTidslinje = new LocalDateTimeline<OmsorgenForVilkårGrunnlag>(
-                    omsorgenForGrunnlag.map(og -> og.getOmsorgenFor().getPerioder()).orElse(List.of())
-                    .stream()
-                    .map(ofp -> new LocalDateSegment<OmsorgenForVilkårGrunnlag>(ofp.getPeriode().getFomDato(), ofp.getPeriode().getTomDato(), new OmsorgenForVilkårGrunnlag(null, null, null, mapToErOmsorgsperson(ofp.getResultat()))))
-                    .collect(Collectors.toList())
-                );
-        return vurdertOmsorgenForTidslinje;
+        return new LocalDateTimeline<>(
+            omsorgenForGrunnlag.map(og -> og.getOmsorgenFor().getPerioder()).orElse(List.of())
+                .stream()
+                .map(ofp -> new LocalDateSegment<>(ofp.getPeriode().getFomDato(), ofp.getPeriode().getTomDato(), new OmsorgenForVilkårGrunnlag(null, null, null, mapToErOmsorgsperson(ofp.getResultat()))))
+                .collect(Collectors.toList())
+        );
     }
 
     private Boolean mapToErOmsorgsperson(Resultat resultat) {
-        switch (resultat) {
-        case OPPFYLT: return true;
-        case IKKE_OPPFYLT: return false;
-        case IKKE_VURDERT: return null;
-        default: throw new IllegalStateException("Uviklerfeil: Ukjen resultat: " + resultat);
-        }
+        return switch (resultat) {
+            case OPPFYLT -> true;
+            case IKKE_OPPFYLT -> false;
+            case IKKE_VURDERT -> null;
+        };
     }
 
     public OmsorgenForVilkårGrunnlag oversettSystemdataTilRegelModellOmsorgen(Long behandlingId, AktørId aktørId, NavigableSet<DatoIntervallEntitet> perioder) {
@@ -139,14 +132,13 @@ public class OmsorgenForTjeneste {
             .collect(Collectors.toList());
 
         return new OmsorgenForVilkårGrunnlag(mapReleasjonMellomPleietrengendeOgSøker(personopplysningerAggregat, pleietrengende),
-                mapAdresser(søkerBostedsadresser), mapAdresser(pleietrengendeBostedsadresser), null);
+            mapAdresser(søkerBostedsadresser), mapAdresser(pleietrengendeBostedsadresser), null);
     }
 
     private DatoIntervallEntitet omsluttendePeriode(final NavigableSet<DatoIntervallEntitet> perioder) {
         final var startDato = perioder.stream().map(DatoIntervallEntitet::getFomDato).min(LocalDate::compareTo).orElse(LocalDate.now());
         final var sluttDato = perioder.stream().map(DatoIntervallEntitet::getTomDato).max(LocalDate::compareTo).orElse(LocalDate.now());
-        final var periodeTilVurdering = DatoIntervallEntitet.fraOgMedTilOgMed(startDato, sluttDato);
-        return periodeTilVurdering;
+        return DatoIntervallEntitet.fraOgMedTilOgMed(startDato, sluttDato);
     }
 
     private List<BostedsAdresse> mapAdresser(List<PersonAdresseEntitet> pleietrengendeBostedsadresser) {
@@ -166,18 +158,16 @@ public class OmsorgenForTjeneste {
             return null;
         }
     }
-    
+
     public Systemdata hentSystemdata(Long behandlingId, AktørId aktørId, AktørId optPleietrengendeAktørId) {
-        final Optional<SøknadsperiodeGrunnlag> søknadsgrunnlag = søknadsperiodeRepository.hentGrunnlag(behandlingId);
+        var behandling = behandlingRepository.hentBehandling(behandlingId);
+        var vilkårsPerioderTilVurderingTjeneste = VilkårsPerioderTilVurderingTjeneste.finnTjeneste(vilkårsPerioderTilVurderingTjenester, behandling.getFagsakYtelseType(), behandling.getType());
+        var fullstendigePerioder = vilkårsPerioderTilVurderingTjeneste.utledFullstendigePerioder(behandlingId);
         var pleietrengende = Optional.ofNullable(optPleietrengendeAktørId);
-        if (søknadsgrunnlag.isEmpty()
-                || søknadsgrunnlag.get().getOppgitteSøknadsperioder() == null
-                || søknadsgrunnlag.get().getOppgitteSøknadsperioder().getPerioder() == null
-                || pleietrengende.isEmpty()) {
+        if (fullstendigePerioder.isEmpty() || pleietrengende.isEmpty()) {
             return new Systemdata(false, false);
         }
-        var søknadsperioder = søknadsgrunnlag.get().getOppgitteSøknadsperioder();
-        var periode = mapTilPeriode(søknadsperioder.getPerioder());
+        var periode = mapTilPeriode(fullstendigePerioder);
 
         var optAggregat = personopplysningTjeneste.hentGjeldendePersoninformasjonForPeriodeHvisEksisterer(behandlingId, aktørId, periode);
         if (optAggregat.isEmpty()) {
@@ -185,7 +175,7 @@ public class OmsorgenForTjeneste {
         }
         var aggregat = optAggregat.get();
         var pleietrengendeAktørId = pleietrengende.get();
-        var relasjon = aggregat.getSøkersRelasjoner().stream().filter(it -> it.getTilAktørId().equals(pleietrengendeAktørId)).collect(Collectors.toList());
+        var relasjon = aggregat.getSøkersRelasjoner().stream().filter(it -> it.getTilAktørId().equals(pleietrengendeAktørId)).toList();
 
         var registrertForeldrerelasjon = relasjon.stream().anyMatch(it -> RelasjonsRolleType.BARN.equals(it.getRelasjonsrolle()));
         var registrertSammeBosted = aggregat.harSøkerSammeAdresseSom(pleietrengendeAktørId, RelasjonsRolleType.BARN);
@@ -193,29 +183,23 @@ public class OmsorgenForTjeneste {
         return new Systemdata(registrertForeldrerelasjon, registrertSammeBosted);
 
     }
-    
-    private DatoIntervallEntitet mapTilPeriode(Set<Søknadsperioder> søknadsperioder) {
-        final List<DatoIntervallEntitet> perioder = søknadsperioder.stream()
-                .map(p -> p.getPerioder())
-                .flatMap(Set::stream)
-                .map(s -> s.getPeriode())
-                .collect(Collectors.toList());
 
+    private DatoIntervallEntitet mapTilPeriode(NavigableSet<DatoIntervallEntitet> perioder) {
         final var fom = perioder
-                .stream()
-                .map(DatoIntervallEntitet::getFomDato)
-                .min(LocalDate::compareTo)
-                .orElseThrow();
+            .stream()
+            .map(DatoIntervallEntitet::getFomDato)
+            .min(LocalDate::compareTo)
+            .orElseThrow();
 
         final var tom = perioder
-                .stream()
-                .map(DatoIntervallEntitet::getTomDato)
-                .max(LocalDate::compareTo)
-                .orElseThrow();
+            .stream()
+            .map(DatoIntervallEntitet::getTomDato)
+            .max(LocalDate::compareTo)
+            .orElseThrow();
 
         return DatoIntervallEntitet.fraOgMedTilOgMed(fom, tom);
     }
-    
+
     public static class Systemdata {
         private final boolean registrertForeldrerelasjon;
         private final boolean registrertSammeBosted;
